--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -7,19 +7,19 @@
 
     <fragment
         android:id="@+id/navigation_home"
-        android:name="com.example.s205452lykkehjulet.ui.home.HomeFragment"
+        android:name="com.example.s205452lykkehjulet.ui.GameFragment"
         android:label="@string/title_home"
-        tools:layout="@layout/fragment_home" />
+        tools:layout="@layout/fragment_game" />
 
     <fragment
         android:id="@+id/navigation_dashboard"
-        android:name="com.example.s205452lykkehjulet.ui.dashboard.DashboardFragment"
+        android:name="com.example.s205452lykkehjulet.ui.HighscoreFragment"
         android:label="@string/title_dashboard"
-        tools:layout="@layout/fragment_dashboard" />
+        tools:layout="@layout/fragment_highscore" />
 
     <fragment
         android:id="@+id/navigation_notifications"
-        android:name="com.example.s205452lykkehjulet.ui.notifications.NotificationsFragment"
+        android:name="com.example.s205452lykkehjulet.ui.EndMessageFragment"
         android:label="@string/title_notifications"
-        tools:layout="@layout/fragment_notifications" />
+        tools:layout="@layout/fragment_end_message" />
 </navigation>
