--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -3,23 +3,23 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/mobile_navigation"
-    app:startDestination="@+id/navigation_home">
+    app:startDestination="@+id/navigation_game">
 
     <fragment
-        android:id="@+id/navigation_home"
+        android:id="@+id/navigation_game"
         android:name="com.example.s205452lykkehjulet.ui.GameFragment"
-        android:label="@string/title_home"
+        android:label="@string/title_game"
         tools:layout="@layout/fragment_game" />
 
     <fragment
-        android:id="@+id/navigation_dashboard"
+        android:id="@+id/navigation_highscore"
         android:name="com.example.s205452lykkehjulet.ui.HighscoreFragment"
-        android:label="@string/title_dashboard"
+        android:label="@string/title_highscore"
         tools:layout="@layout/fragment_highscore" />
 
     <fragment
-        android:id="@+id/navigation_notifications"
+        android:id="@+id/navigation_end_message"
         android:name="com.example.s205452lykkehjulet.ui.EndMessageFragment"
-        android:label="@string/title_notifications"
+        android:label="@string/title_end_message"
         tools:layout="@layout/fragment_end_message" />
 </navigation>
