--- a/app/src/main/res/layout/letter_card.xml
+++ b/app/src/main/res/layout/letter_card.xml
@@ -1,30 +1,23 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/letter"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
     app:cardBackgroundColor="@color/white"
-    app:cardCornerRadius="5dp">
+    android:layout_margin="3dp"
 
-    <androidx.constraintlayout.widget.ConstraintLayout
-        android:layout_width="match_parent"
+    >
+
+    <TextView
+        android:id="@+id/letterText"
+        android:layout_width="30dp"
         android:layout_height="wrap_content"
-        android:padding="16dp"
-        >
+        android:textSize="40dp"
+        android:visibility="visible"
 
-        <ImageView
-            android:id="@+id/letterImage"
-            android:layout_width="40dp"
-            android:layout_height="60dp"
-            tools:layout_editor_absoluteX="16dp"
-            tools:layout_editor_absoluteY="16dp"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:tint="@color/white" />
 
-    </androidx.constraintlayout.widget.ConstraintLayout>
-
+        />
 
 </androidx.cardview.widget.CardView>
