--- a/app/src/main/res/layout/fragment_game.xml
+++ b/app/src/main/res/layout/fragment_game.xml
@@ -44,5 +44,14 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/spin_button" />
 
+    <TextView
+        android:id="@+id/guessed_letters"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Guessed letters: "
+        app:layout_constraintBottom_toTopOf="@+id/spin_text"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
