--- a/app/src/main/res/layout/letter_card.xml
+++ b/app/src/main/res/layout/letter_card.xml
@@ -14,6 +14,7 @@
         android:id="@+id/letterText"
         android:layout_width="30dp"
         android:layout_height="wrap_content"
+        app:layout_constraintTop_toTopOf="@id/life_recycler_view"
         android:textSize="40dp"
         android:visibility="visible"
 
