--- a/app/src/main/res/layout/fragment_game.xml
+++ b/app/src/main/res/layout/fragment_game.xml
@@ -73,7 +73,7 @@
         android:layout_height="wrap_content"
         android:foregroundGravity="right"
         android:gravity="top"
-        android:text=""
+        android:text="Score: 0"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         android:textStyle="bold"
