--- a/app/src/main/res/layout/fragment_game.xml
+++ b/app/src/main/res/layout/fragment_game.xml
@@ -27,24 +27,21 @@
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/letter_recycler_view"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:layout_gravity="center"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@id/life_recycler_view"
- />
+        app:layout_constraintTop_toBottomOf="@+id/life_recycler_view" />
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/life_recycler_view"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
-        tools:itemCount="1"
-        app:layout_constraintBottom_toTopOf="@+id/spin_text"
-        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        tools:itemCount="1" />
 
     <EditText
         android:id="@+id/guess_text"
@@ -74,8 +71,8 @@
         android:foregroundGravity="right"
         android:gravity="top"
         android:text="Score: 0"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
+        android:textSize="30dp"
         android:textStyle="bold"
-        android:textSize="30dp"/>
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 </androidx.constraintlayout.widget.ConstraintLayout>
