--- a/app/src/main/res/layout/life_card.xml
+++ b/app/src/main/res/layout/life_card.xml
@@ -1,30 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:layout_width="40dp"
+    android:layout_height="60dp"
     android:id="@+id/life"
-    app:cardBackgroundColor="@color/white"
-    app:cardCornerRadius="5dp">
-
-    <androidx.constraintlayout.widget.ConstraintLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:padding="16dp"
-        >
-
-        <ImageView
-            android:id="@+id/lifeImage"
-            android:layout_width="40dp"
-            android:layout_height="60dp"
-            tools:layout_editor_absoluteX="16dp"
-            tools:layout_editor_absoluteY="16dp"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:tint="@color/red" />
-
-    </androidx.constraintlayout.widget.ConstraintLayout>
-
+    app:cardBackgroundColor="@color/red"
+    app:cardCornerRadius="5dp"
+    android:layout_margin="3dp"
+    >
 
 </androidx.cardview.widget.CardView>
